header for mobile

--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>My first test site</title>
+    <title>My first test website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
         <nav class="header__nav">
             <ul class="nav__list">
-                <li class="nav__item">Intro</li>
-                <li class="nav__item">News</li>
-                <li class="nav__item">Gallery</li>
-                <li class="nav__item">Contact</li>
-                <li class="nav__item">Column</li>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--modifer" href="#">Intro</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--modifer" href="#">News</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--modifer" href="#">Gallery</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--modifer" href="#">Contact</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--modifer" href="">Columns</a>
+                </li>
+
             </ul>
         </nav>
         <div class="main-header">
@@ -67,7 +79,8 @@
 
     <section class="gallery">
         <h2 class="gallery__header">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
-        <p class="gallery__text">Enim tempora porro ratione velit atque est laborum fugiatmenda, quae delectus a suscipit. Lorem, ipsum dolor sitamet consectetur adipisicing elit. </p>
+        <p class="gallery__text">Enim tempora porro ratione velit atque est laborum fugiatmenda, quae delectus a suscipit. Lorem, ipsum dolor sitamet
+            consectetur adipisicing elit. </p>
         <img src="/img/tm-450x300-01.jpg" alt="picture" class="gallery__picture">
         <img src="/img/tm-450x300-02.jpg" alt="picture" class="gallery__picture">
         <img src="/img/tm-450x300-05.jpg" alt="picture" class="gallery__picture">
