--- a/index.html
+++ b/index.html
@@ -43,36 +43,36 @@
 
     <section class="news">
         <div class="news__container">
-            <div>
-                <img src="/img/tm-600x300-01.jpg" alt="picture">
+            <div class="news__item">
+                <img class="news__picture" src="/img/tm-600x300-01.jpg" alt="picture">
             </div>
-            <div>
-                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+            <div class="news__item">
+                <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
                     fugiatmenda, quae delectus a suscipit.</p>
-                <button type="submit">Preview</button>
+                <button class="news__btn" type="submit">Preview</button>
             </div>
         </div>
         <div class="news__container">
-            <div>
-                <img src="/img/tm-600x300-02.jpg" alt="picture">
+            <div class="news__item">
+                <img class="news__picture" src="/img/tm-600x300-02.jpg" alt="picture">
             </div>
-            <div>
-                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+            <div class="news__item">
+                <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
                     fugiatmenda, quae delectus a suscipit.</p>
-                <button type="submit">Read</button>
+                <button class="news__btn" type="submit">Read</button>
             </div>
         </div>
         <div class="news__container">
-            <div>
-                <img src="/img/tm-600x300-03.jpg" alt="picture">
+            <div class="news__item">
+                <img class="news__picture" src="/img/tm-600x300-03.jpg" alt="picture">
             </div>
-            <div>
-                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+            <div class="news__item">
+                <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
                     fugiatmenda, quae delectus a suscipit.</p>
-                <button type="submit">Detail</button>
+                <button class="news__btn" type="submit">Detail</button>
             </div>
         </div>
     </section>
