--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <nav class="header__nav">
             <ul class="nav__list">
@@ -36,7 +36,7 @@
             <img src="/img/tm-lumino-logo.png" alt="logo" class="main-header__logo">
             <h1 class="main-header__header">Test Template</h1>
             <p class="main-header__text">Some Bullshit</p>
-            <button class="main-header__btn" type="button">Begin</button>
+            <button class="main-header__btn main-header__btn--hover" type="button">Begin</button>
         </div>
 
     </header>
@@ -48,7 +48,7 @@
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
+                <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
                     fugiatmenda, quae delectus a suscipit.</p>
                 <button class="news__btn" type="submit">Preview</button>
             </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
+                <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
                     fugiatmenda, quae delectus a suscipit.</p>
                 <button class="news__btn" type="submit">Read</button>
             </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
+                <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
                     fugiatmenda, quae delectus a suscipit.</p>
                 <button class="news__btn" type="submit">Detail</button>
             </div>
@@ -83,41 +83,41 @@
             consectetur adipisicing elit. </p>
 
         <ul class="gallery__list">
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-01.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-01.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-02.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-02.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-05.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-05.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-03.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-03.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-04.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-04.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-06.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-06.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-07.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-07.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-08.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-08.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-09.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow " src="/img/tm-450x300-09.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-10.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-10.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-11.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-11.jpg" alt="picture">
             </li>
-            <li class="gallery__picture">
-                <img src="/img/tm-450x300-12.jpg" alt="picture">
+            <li class="gallery__item">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-12.jpg" alt="picture">
             </li>
         </ul>
     </section>
@@ -125,13 +125,15 @@
     <section class="contact">
         <h2 class="contact-main__header">Contact Us!</h2>
         <form class="contact__form" action="" method="">
-            <input class="contact__input" type="text" placeholder="Name" required>
-            <input class="contact__input" type="email" placeholder="Email" required>
+            <div class="contact__form--division">
+                <input class="contact__input" type="text" placeholder="Name" required>
+                <input class="contact__input" type="email" placeholder="Email" required>
+            </div>
             <input class="contact__input" type="text" placeholder="Subject" required>
             <textarea class="contact__input contact__message" placeholder="Message"></textarea>
             <button class="contact__btn" type="submit">Submit</button>
         </form>
-        <div class="contact-text-conteiner">
+        <div class="contact__text-conteiner">
             <h3 class="contact__header">Etiam at rhoncus nisl</h3>
             <p class="contact__text">Nunc rutrum ac ante euismod cursus. Suspendisse imperdiet feugiat massa nec iaculis</p>
             <p class="contact__text">Tel: 010-020-0340</p>
