corrected file extension

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="news">
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-01.jpg" alt="picture">
+                <img class="news__picture" src="/img/tm-600x300-01.JPG" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -55,7 +55,7 @@
         </div>
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-02.jpg" alt="picture">
+                <img class="news__picture" src="/img/tm-600x300-02.JPG" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -66,7 +66,7 @@
         </div>
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-03.jpg" alt="picture">
+                <img class="news__picture" src="/img/tm-600x300-03.JPG" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -84,40 +84,40 @@
 
         <ul class="gallery__list">
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-01.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-01.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-02.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-02.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-05.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-05.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-03.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-03.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-04.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-04.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-06.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-06.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-07.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-07.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-08.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-08.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow " src="/img/tm-450x300-09.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow " src="/img/tm-450x300-09.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-10.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-10.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-11.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-11.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-12.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-12.JPG" alt="picture">
             </li>
         </ul>
     </section>
