corrected img extension

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <div class="main-header">
-            <img src="/img/tm-lumino-logo.PNG" alt="logo" class="main-header__logo">
+            <img src="img/tm-lumino-logo.PNG" alt="logo" class="main-header__logo">
             <h1 class="main-header__header">Test Template</h1>
             <p class="main-header__text">Some Bullshit</p>
             <button class="main-header__btn main-header__btn--hover" type="button">Begin</button>
@@ -44,7 +44,7 @@
     <section class="news">
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-01.JPG" alt="picture">
+                <img class="news__picture" src="img/tm-600x300-01.JPG" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -55,7 +55,7 @@
         </div>
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-02.JPG" alt="picture">
+                <img class="news__picture" src="img/tm-600x300-02.JPG" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -66,7 +66,7 @@
         </div>
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-03.JPG" alt="picture">
+                <img class="news__picture" src="img/tm-600x300-03.JPG" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -84,40 +84,40 @@
 
         <ul class="gallery__list">
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-01.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-01.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-02.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-02.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-05.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-05.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-03.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-03.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-04.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-04.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-06.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-06.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-07.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-07.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-08.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-08.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow " src="/img/tm-450x300-09.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow " src="img/tm-450x300-09.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-10.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-10.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-11.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-11.JPG" alt="picture">
             </li>
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/img/tm-450x300-12.JPG" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="img/tm-450x300-12.JPG" alt="picture">
             </li>
         </ul>
     </section>
