--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-02.JPG" alt="picture">
+                <img class="news__picture" src="/img/tm-600x300-02.jpg" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -66,7 +66,7 @@
         </div>
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="/img/tm-600x300-03.JPG" alt="picture">
+                <img class="news__picture" src="/img/tm-600x300-03.jpg" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
