--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <div class="main-header">
-            <img src="https://pawada.github.io/imag/tm-lumino-logo.PNG" alt="logo" class="main-header__logo">
+            <img src="https://pawada.github.io/img/tm-lumino-logo.png" alt="logo" class="main-header__logo">
             <h1 class="main-header__header">Test Template</h1>
             <p class="main-header__text">Some Bullshit</p>
             <button class="main-header__btn main-header__btn--hover" type="button">Begin</button>
