--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <div class="main-header">
-            <img src="img/tm-lumino-logo.PNG" alt="logo" class="main-header__logo">
+            <img src="https://pawada.github.io/img/tm-lumino-logo.png" alt="logo" class="main-header__logo">
             <h1 class="main-header__header">Test Template</h1>
             <p class="main-header__text">Some Bullshit</p>
             <button class="main-header__btn main-header__btn--hover" type="button">Begin</button>
@@ -44,7 +44,7 @@
     <section class="news">
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="img/tm-600x300-01.JPG" alt="picture">
+                <img class="news__picture" src="https://pawada.github.io/img/tm-600x300-01.jpg" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
@@ -55,7 +55,7 @@
         </div>
         <div class="news__container">
             <div class="news__item">
-                <img class="news__picture" src="img/tm-600x300-02.JPG" alt="picture">
+                <img class="news__picture" src="https://pawada.github.io/img/tm-600x300-02.jpg" alt="picture">
             </div>
             <div class="news__item">
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
