fix img and font

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>My first test website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet"> 
     <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body class="body">
@@ -84,7 +84,7 @@
 
         <ul class="gallery__list">
             <li class="gallery__item">
-                <img class="gallery__picture gallery__picture--shadow" src="/test-projectimg/tm-450x300-01.jpg" alt="picture">
+                <img class="gallery__picture gallery__picture--shadow" src="/test-project/img/tm-450x300-01.jpg" alt="picture">
             </li>
             <li class="gallery__item">
                 <img class="gallery__picture gallery__picture--shadow" src="/test-project/img/tm-450x300-02.jpg" alt="picture">
