fixed btn hover

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h2 class="news__header">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
                 <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro ratione velit atque est laborum
                     fugiatmenda, quae delectus a suscipit.</p>
-                <button class="news__btn" type="submit">Preview</button>
+                <button class="news__btn news__btn--hover" type="submit">Preview</button>
             </div>
         </div>
         <div class="news__container">
