fix background size

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
     </section>
     <footer>
-        <p class="footer-copyright">Copyright © 2016 &copy; Company Name</p>
+        <p class="footer-copyright">Copyright &copy; 2016 Company Name</p>
     </footer>
 
 </body>
